[metadata]
name = gctools
version = 0.0.1
author = Géry Casiez
author_email = gery.casiez@univ-lille.fr
description = Tools provided by GC.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.univ-lille.fr/gery.casiez/gctools
project_urls =
    Bug Tracker = https://gitlab.univ-lille.fr/gery.casiez/gctools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gctools
packages = find:
python_requires = >=3.6

[options.packages.find]
where = gctools


